--- a/README.adoc
+++ b/README.adoc
@@ -2,5 +2,5 @@
 
 Repository for the ProB 2.0 Developer and User Handbook.
 
-The handbook is located at https://www3.hhu.de/stups/handbook/prob2/handbook.html
-A pdf is available from https://www3.hhu.de/stups/handbook/prob2/handbook.pdf
+* The handbook is located at https://www3.hhu.de/stups/handbook/prob2/handbook.html
+* A pdf is available from https://www3.hhu.de/stups/handbook/prob2/handbook.pdf
