--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= ProB 2.0 Developer Manual
+= ProB 2.0 Developer and User Handbook
 
 image:https://travis-ci.org/hhu-stups/prob2-doc.svg?branch=master["Build Status", link="https://travis-ci.org/hhu-stups/prob2-doc"]
 
