Set all attributes in adoc header instead of build.gradle
So they are automatically accessible to other AsciiDoc tools.

--- a/src/docs/asciidoc/prob_handbook.adoc
+++ b/src/docs/asciidoc/prob_handbook.adoc
@@ -1,8 +1,15 @@
 = ProB Handbook
 Jens Bendisposto;Joy Clark;Michael Leuschel
-
+:bibtex-file: combined.bib
+:coderay-linenums-mode: table
+:doctype: book
+:encoding: utf-8
+:icon: font
+:imagesdir: images
+:linkattrs:
+:source-highlighter: coderay
+:toc: left
 :xrefstyle: short
-:toc:
 
 :leveloffset: +1
 
