--- a/README.adoc
+++ b/README.adoc
@@ -1,11 +1,9 @@
 = ProB 2.0 Handbook
 
-image:https://travis-ci.org/hhu-stups/prob2-doc.svg?branch=master["Build Status", link="https://travis-ci.org/hhu-stups/prob2-doc"]
-
 Repository for the ProB 2.0 Handbook.
 
-* The handbook is located at https://www3.hhu.de/stups/handbook/prob2/prob_handbook.html
-* A PDF is available from https://www3.hhu.de/stups/handbook/prob2/prob_handbook.pdf
+* The handbook is located at https://stups.hhu-hosting.de/handbook/prob2/prob_handbook.html
+* A PDF is available from https://stups.hhu-hosting.de/handbook/prob2/prob_handbook.pdf
 
 == Building
 
